--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot
-flask
-gunicorn
-yt-dlp
+python-telegram-bot==20.8
+flask==3.0.2
+gunicorn==21.2.0
+yt-dlp==2024.12.06
+requests==2.31.0
